<resources>
    <string name="app_name">TransitionFirebaseTest</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="username_post_placeholder">Allen Walker</string>
    <string name="collection_text_placeholder">Cosplay Plus</string>
    <string name="time_post_placeholder">39min</string>
    <string name="post_placeholder_content">Beautiful koneko cosplay.</string>
    <string name="button_plus_one">+1</string>
    <string name="plus_one_text_placeholder">+9</string>
    <string name="username_card">Allen Walker</string>
    <string name="secondword_detail">Me gusta</string>
    <string name="titleimagedetail">Nishikino Maki</string>
    <string name="detail_text">
        Maki Nishikino (西木野真姫 Nishikino Maki) es una de las nueve protagonistas de Love Live! e integrante de μ\'s. Tiene 15 años y cursa primer año
        en la preparatoria Otonokizaka. Nació el 19 de abril y su color de imagen es el rojo. Forma parte de la sub-unidad BiBi.
        Maki es una tsundere, es decir, tiene dificultades al momento de expresar correctamente sus sentimientos. Tiene creencias algo infantiles, dado que aún cree en Santa Claus. Es terca, y al comienzo de la historia se ve que pasa su tiempo sola en el salón de música.
        Su personalidad a menudo choca con la de Nico Yazawa, pues ambas son bastante obstinadas. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered. Login !!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up !!</string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !!</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>
    <string name="btn_link_to_signup">Don\'t have an account, Signup !!</string>
    <string name="email_password_unsuccessful_signup_message">An error ocurred</string>
</resources>



















