<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card:cardElevation="@dimen/card_elevation"
    card:cardCornerRadius="@dimen/card_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_simple_linear_height"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/card_padding"
            android:paddingRight="@dimen/card_padding">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_post"
                android:layout_width="@dimen/card_icon_button_size"
                android:layout_height="@dimen/card_icon_button_size"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar"
                android:layout_marginRight="@dimen/card_padding"/>

            <TextView
                android:id="@+id/username_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_post_placeholder"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/card_text_margin_top"
                android:layout_toRightOf="@+id/avatar_post"
                android:layout_toEndOf="@+id/avatar_post"/>

            <TextView
                android:id="@+id/collection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collection_text_placeholder"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="@dimen/card_text_margin_top"
                android:layout_below="@+id/username_post"
                android:layout_toRightOf="@+id/avatar_post"
                android:layout_toEndOf="@+id/avatar_post"/>

            <TextView
                android:id="@+id/time_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_post_placeholder"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/card_text_margin_top"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/content_post"
                android:text="@string/post_placeholder_content"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/card_text_margin_top"
                android:paddingBottom="@dimen/card_text_margin_top"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/card_padding"
                android:paddingRight="@dimen/card_padding"/>

            <!--android:src="@drawable/koneko"-->
            <ImageView
                android:id="@+id/image_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="@dimen/post_image_card_size"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/card_full_margin_top"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_simple_linear_height"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/card_full_margin_top"
            android:paddingLeft="@dimen/card_padding"
            android:paddingRight="@dimen/card_padding">

            <Button
                android:id="@+id/button_plus"
                android:layout_width="@dimen/card_icon_button_size"
                android:layout_height="@dimen/card_icon_button_size"
                android:text="@string/button_plus_one"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/card_full_margin_top"
                android:layout_marginEnd="@dimen/card_full_margin_top"
                android:background="@drawable/ripple" />

            <TextView
                android:id="@+id/count_plus_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_one_text_placeholder"
                android:textColor="@color/secondaryColorText"
                android:layout_toRightOf="@+id/button_plus"
                android:layout_toEndOf="@+id/button_plus"
                android:layout_centerVertical="true"/>


            <ImageButton
                android:id="@+id/button_comments"
                android:layout_width="@dimen/card_icon_button_size"
                android:layout_height="@dimen/card_icon_button_size"
                android:layout_marginRight="@dimen/card_button_margin_top"
                android:layout_marginEnd="@dimen/card_button_margin_top"
                android:src="@mipmap/ic_comments"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/button_share"
                android:layout_toStartOf="@+id/button_share"

                android:background="@drawable/ripple_light_gray"/>

            <ImageButton
                android:id="@+id/button_share"
                android:layout_width="@dimen/card_icon_button_size"
                android:layout_height="@dimen/card_icon_button_size"
                android:src="@mipmap/ic_share"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ripple_light_gray"/>


        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>


































